ncmpc 0.15 - not yet released
* added CMD_SELECT_PLAYING
* display song duration in the playlist


ncmpc 0.14 - 2009-04-21
  * bell on wrapped search (optionally)
  * added new "jump" ('.') command, which queries the user for a string and
    jumps to the entry which begins with that string while the user is typing.
  * added new "select range" ('v') command, which lets the user perform various
    actions (e.g. add to playlist, delete, move, shuffle) on ranges of songs
  * added commands ('H', 'M', 'L') to jump to top, middle, and bottom of screen
  * added scrolling commands ('^B', '^N', 'B', 'N') to scroll up/down one line
    or up/down half a screen
  * added screen swap ('`') command to switch to the most recently used screen
  * added MPD information and currently playing song to the info screen ('i')
  * support for new MPD 0.15 modes: single ('y'), consume ('C')
  * added "scroll-offset" option
  * new translations: Czech, Simplified Chinese, Korean, Ukrainian, Dutch


ncmpc 0.13 - 2009-01-09
  * added output configuration screen, default hotkey F8
  * new --disable-locale configure option
  * new --disable-multibyte configure option; this allows you to
    disable wide character support, retaining multibyte character
    support
  * search with regular expressions


ncmpc 0.12 - 2008-12-05
  * added artist screen (tag browser)
  * added highly experimental lyrics screen (disabled by default)
  * removed clock screen
  * support wide characters
  * optimized memory usage
  * always try to reconnect after server failure
  * support unix domain sockets for the MPD connection
  * added compile-time "mini" option which produces the smallest
    possible ncmpc binary
  * added LIRC support
  * scroll long song names in the playlist
  * added command "locate" ('G') which locates a song in the database browser
  * added "song" screen ('i') which displays song information


ncmpc 0.11.1 - 2005-01-24
 + Spanish translations from Jose Cedeno