@@ -127,6 +127,9 @@ Show a list of the screens in the top line on startup.
 .TP 
 .B wide\-cursor = yes|no
 Make the cursor as wide as the screen.
+.TP
+.B hardware\-cursor = yes|no
+Use the terminal's hardware cursor instead of inverse colors.
 .TP 
 .B hide\-cursor = NUM
 Hide the playlist cursor after NUM seconds of inactivity.
